# scoot

./: .bazelrc  README.md  WORKSPACE  deps.bzl  go.mod
.github/workflows/: ci.yml
scoot/apiserver/: BUILD.bazel
scoot/async/: BUILD.bazel
scoot/binaries/scoot-snapshot-db/: BUILD.bazel
scoot/cleaner/: BUILD.bazel
scoot/cleaner/dirconfig/: BUILD.bazel
scoot/cloud/cluster/: BUILD.bazel
scoot/cloud/cluster/local/: BUILD.bazel
scoot/common/: BUILD.bazel
scoot/common/allocator/: BUILD.bazel
scoot/common/client/: BUILD.bazel
scoot/common/dialer/: BUILD.bazel
scoot/common/endpoints/: BUILD.bazel
scoot/common/errors/: BUILD.bazel
scoot/common/log/helpers/: BUILD.bazel
scoot/common/log/hooks/: BUILD.bazel
scoot/common/log/tags/: BUILD.bazel
scoot/common/stats/: BUILD.bazel
scoot/common/thrifthelpers/: BUILD.bazel
scoot/config/jsonconfig/: BUILD.bazel
scoot/config/scootconfig/: BUILD.bazel
scoot/ice/: BUILD.bazel
scoot/integration-tests/recoverytest/: BUILD.bazel
scoot/integration-tests/scoot-integration/: BUILD.bazel
scoot/integration-tests/smoketest/: BUILD.bazel
scoot/perftests/: BUILD.bazel
scoot/perftests/scheduler_simulator/: BUILD.bazel
scoot/perftests/scheduler_simulator/priority_scheduling_sim/: BUILD.bazel
scoot/runner/: BUILD.bazel
scoot/runner/execer/: BUILD.bazel
scoot/runner/execer/execers/: BUILD.bazel
scoot/runner/execer/os/: BUILD.bazel
scoot/runner/mocks/: BUILD.bazel
scoot/runner/runners/: BUILD.bazel
scoot/saga/: BUILD.bazel
scoot/saga/sagalogs/: BUILD.bazel
scoot/scheduler/: BUILD.bazel
scoot/scheduler/api/: BUILD.bazel
scoot/scheduler/api/thrift/: BUILD.bazel
scoot/scheduler/api/thrift/gen-go/scoot/: BUILD.bazel
scoot/scheduler/client/: BUILD.bazel
scoot/scheduler/client/cli/: BUILD.bazel
scoot/scheduler/client/scootcl/: BUILD.bazel
scoot/scheduler/domain/: BUILD.bazel
scoot/scheduler/domain/gen-go/sched/: BUILD.bazel
scoot/scheduler/scheduler/: BUILD.bazel
scoot/scheduler/scheduler/config/: BUILD.bazel
scoot/scheduler/server/: BUILD.bazel
scoot/scheduler/setup/: BUILD.bazel
scoot/scheduler/setup/worker/: BUILD.bazel
scoot/scheduler/starter/: BUILD.bazel
scoot/setup-cloud-scoot/: BUILD.bazel
scoot/snapshot/: BUILD.bazel
scoot/snapshot/bundlestore/: BUILD.bazel
scoot/snapshot/cli/: BUILD.bazel
scoot/snapshot/git/gitdb/: BUILD.bazel
scoot/snapshot/git/repo/: BUILD.bazel
scoot/snapshot/snapshots/: BUILD.bazel
scoot/snapshot/store/: BUILD.bazel
scoot/tests/testhelpers/: BUILD.bazel
scoot/worker/client/: BUILD.bazel
scoot/worker/domain/: BUILD.bazel
scoot/worker/domain/gen-go/worker/: BUILD.bazel
scoot/worker/starter/: BUILD.bazel
scoot/worker/workerserver/: BUILD.bazel
scripts/: test_bazel.sh
snapshot/git/gitdb/: db_test.go
