load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "apiserver_lib",
    srcs = ["main.go"],
    importpath = "github.com/twitter/scoot/scoot/apiserver",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_twitter_scoot//cloud/cluster:go_default_library",
        "@com_github_twitter_scoot//cloud/cluster/local:go_default_library",
        "@com_github_twitter_scoot//common:go_default_library",
        "@com_github_twitter_scoot//common/endpoints:go_default_library",
        "@com_github_twitter_scoot//common/log/hooks:go_default_library",
        "@com_github_twitter_scoot//common/stats:go_default_library",
        "@com_github_twitter_scoot//config/jsonconfig:go_default_library",
        "@com_github_twitter_scoot//snapshot/bundlestore:go_default_library",
        "@com_github_twitter_scoot//snapshot/git/gitdb:go_default_library",
        "@com_github_twitter_scoot//snapshot/snapshots:go_default_library",
        "@com_github_twitter_scoot//snapshot/store:go_default_library",
    ],
)

go_binary(
    name = "apiserver",
    embed = [":apiserver_lib"],
    visibility = ["//visibility:public"],
)
