load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "snapshot",
    srcs = [
        "db.go",
        "doc.go",
        "filer.go",
        "snapshots.go",
    ],
    importpath = "github.com/twitter/scoot/scoot/snapshot",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_twitter_scoot//snapshot/git/repo:go_default_library",
    ],
)
