load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "scoot-snapshot-db_lib",
    srcs = ["main.go"],
    importpath = "github.com/twitter/scoot/scoot/binaries/scoot-snapshot-db",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@com_github_twitter_scoot//common/dialer:go_default_library",
        "@com_github_twitter_scoot//common/log/hooks:go_default_library",
        "@com_github_twitter_scoot//common/stats:go_default_library",
        "@com_github_twitter_scoot//scheduler/client:go_default_library",
        "@com_github_twitter_scoot//snapshot:go_default_library",
        "@com_github_twitter_scoot//snapshot/cli:go_default_library",
        "@com_github_twitter_scoot//snapshot/git/gitdb:go_default_library",
        "@com_github_twitter_scoot//snapshot/git/repo:go_default_library",
        "@com_github_twitter_scoot//snapshot/store:go_default_library",
    ],
)

go_binary(
    name = "scoot-snapshot-db",
    embed = [":scoot-snapshot-db_lib"],
    visibility = ["//visibility:public"],
)
