load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cluster",
    srcs = [
        "cluster.go",
        "fetch_cron.go",
        "node.go",
        "state.go",
    ],
    importpath = "github.com/twitter/scoot/scoot/cloud/cluster",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_twitter_scoot//common/stats:go_default_library",
    ],
)

go_test(
    name = "cluster_test",
    srcs = [
        "cluster_test.go",
        "fetch_cron_test.go",
    ],
    embed = [":cluster"],
    deps = [
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_twitter_scoot//common:go_default_library",
        "@com_github_twitter_scoot//common/log/hooks:go_default_library",
    ],
)
