load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "client",
    srcs = ["client.go"],
    importpath = "github.com/twitter/scoot/scoot/common/client",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_spf13_cobra//:go_default_library",
        "@com_github_twitter_scoot//common/dialer:go_default_library",
        "@com_github_twitter_scoot//scheduler/client:go_default_library",
    ],
)
