load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "endpoints",
    srcs = [
        "endpoints.go",
        "setup.go",
    ],
    importpath = "github.com/twitter/scoot/scoot/common/endpoints",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_twitter_scoot//common/stats:go_default_library",
        "@com_github_twitter_scoot//config/jsonconfig:go_default_library",
        "@com_github_twitter_scoot//ice:go_default_library",
    ],
)
