load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "recoverytest_lib",
    srcs = ["main.go"],
    importpath = "github.com/twitter/scoot/scoot/integration-tests/recoverytest",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_twitter_scoot//common/log/hooks:go_default_library",
        "@com_github_twitter_scoot//scheduler:go_default_library",
        "@com_github_twitter_scoot//tests/testhelpers:go_default_library",
    ],
)

go_binary(
    name = "recoverytest",
    embed = [":recoverytest_lib"],
    visibility = ["//visibility:public"],
)
