load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "scoot-integration_lib",
    srcs = ["main.go"],
    importpath = "github.com/twitter/scoot/scoot/integration-tests/scoot-integration",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_twitter_scoot//common:go_default_library",
        "@com_github_twitter_scoot//common/log/hooks:go_default_library",
        "@com_github_twitter_scoot//scheduler:go_default_library",
        "@com_github_twitter_scoot//scheduler/api/thrift/gen-go/scoot:go_default_library",
        "@com_github_twitter_scoot//tests/testhelpers:go_default_library",
        "@com_github_twitter_scoot//worker/domain:go_default_library",
    ],
)

go_binary(
    name = "scoot-integration",
    embed = [":scoot-integration_lib"],
    visibility = ["//visibility:public"],
)
