load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "smoketest",
    srcs = ["smoketest.go"],
    importpath = "github.com/twitter/scoot/scoot/integration-tests/smoketest",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@com_github_twitter_scoot//common/client:go_default_library",
        "@com_github_twitter_scoot//scheduler/api/thrift/gen-go/scoot:go_default_library",
        "@com_github_twitter_scoot//tests/testhelpers:go_default_library",
    ],
)
