load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "scheduler_simulator",
    srcs = [
        "fake_worker_cli.go",
        "test_alg.go",
    ],
    importpath = "github.com/twitter/scoot/scoot/perftests/scheduler_simulator",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_twitter_scoot//cloud/cluster:go_default_library",
        "@com_github_twitter_scoot//common:go_default_library",
        "@com_github_twitter_scoot//common/errors:go_default_library",
        "@com_github_twitter_scoot//common/log/tags:go_default_library",
        "@com_github_twitter_scoot//common/stats:go_default_library",
        "@com_github_twitter_scoot//runner:go_default_library",
        "@com_github_twitter_scoot//saga:go_default_library",
        "@com_github_twitter_scoot//saga/sagalogs:go_default_library",
        "@com_github_twitter_scoot//scheduler/domain:go_default_library",
        "@com_github_twitter_scoot//scheduler/server:go_default_library",
    ],
)
