load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "runners",
    srcs = [
        "chaos.go",
        "invoke.go",
        "local_output.go",
        "log_uploader.go",
        "null_output.go",
        "polling.go",
        "queue.go",
        "service.go",
        "setup.go",
        "status_manager.go",
        "statuses_ro.go",
    ],
    importpath = "github.com/twitter/scoot/scoot/runner/runners",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_nu7hatch_gouuid//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_twitter_scoot//common/errors:go_default_library",
        "@com_github_twitter_scoot//common/log/hooks:go_default_library",
        "@com_github_twitter_scoot//common/log/tags:go_default_library",
        "@com_github_twitter_scoot//common/stats:go_default_library",
        "@com_github_twitter_scoot//ice:go_default_library",
        "@com_github_twitter_scoot//runner:go_default_library",
        "@com_github_twitter_scoot//runner/execer:go_default_library",
        "@com_github_twitter_scoot//runner/execer/execers:go_default_library",
        "@com_github_twitter_scoot//runner/execer/os:go_default_library",
        "@com_github_twitter_scoot//snapshot:go_default_library",
    ],
)

go_test(
    name = "runners_test",
    srcs = [
        "local_output_test.go",
        "polling_test.go",
        "queue_test.go",
        "service_test.go",
        "single_test.go",
    ],
    embed = [":runners"],
    deps = [
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_twitter_scoot//common/errors:go_default_library",
        "@com_github_twitter_scoot//common/log/hooks:go_default_library",
        "@com_github_twitter_scoot//common/log/tags:go_default_library",
        "@com_github_twitter_scoot//common/stats:go_default_library",
        "@com_github_twitter_scoot//runner:go_default_library",
        "@com_github_twitter_scoot//runner/execer:go_default_library",
        "@com_github_twitter_scoot//runner/execer/execers:go_default_library",
        "@com_github_twitter_scoot//runner/execer/os:go_default_library",
        "@com_github_twitter_scoot//snapshot:go_default_library",
        "@com_github_twitter_scoot//snapshot/snapshots:go_default_library",
    ],
)
