load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "sagalogs",
    srcs = [
        "file.go",
        "memory.go",
    ],
    importpath = "github.com/twitter/scoot/scoot/saga/sagalogs",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_twitter_scoot//common/stats:go_default_library",
        "@com_github_twitter_scoot//saga:go_default_library",
    ],
)

go_test(
    name = "sagalogs_test",
    srcs = [
        "file_test.go",
        "memory_test.go",
    ],
    embed = [":sagalogs"],
    deps = ["@com_github_twitter_scoot//saga:go_default_library"],
)
