load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "api",
    srcs = [
        "doc.go",
        "server.go",
    ],
    importpath = "github.com/twitter/scoot/scoot/scheduler/api",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_apache_thrift//lib/go/thrift:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_twitter_scoot//common/stats:go_default_library",
        "@com_github_twitter_scoot//saga:go_default_library",
        "@com_github_twitter_scoot//scheduler/api/thrift:go_default_library",
        "@com_github_twitter_scoot//scheduler/api/thrift/gen-go/scoot:go_default_library",
        "@com_github_twitter_scoot//scheduler/server:go_default_library",
    ],
)

go_test(
    name = "api_test",
    srcs = ["server_test.go"],
    embed = [":api"],
    deps = [
        "@com_github_twitter_scoot//scheduler/api/thrift/gen-go/scoot:go_default_library",
        "@com_github_twitter_scoot//scheduler/domain:go_default_library",
    ],
)
