load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "client",
    srcs = [
        "client.go",
        "locate.go",
    ],
    importpath = "github.com/twitter/scoot/scoot/scheduler/client",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_twitter_scoot//common/dialer:go_default_library",
        "@com_github_twitter_scoot//scheduler/api/thrift/gen-go/scoot:go_default_library",
    ],
)
