load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "domain",
    srcs = [
        "definitions.go",
        "generators.go",
    ],
    importpath = "github.com/twitter/scoot/scoot/scheduler/domain",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_leanovate_gopter//:go_default_library",
        "@com_github_twitter_scoot//common/log/tags:go_default_library",
        "@com_github_twitter_scoot//common/thrifthelpers:go_default_library",
        "@com_github_twitter_scoot//runner:go_default_library",
        "@com_github_twitter_scoot//scheduler/domain/gen-go/sched:go_default_library",
        "@com_github_twitter_scoot//tests/testhelpers:go_default_library",
    ],
)

go_test(
    name = "domain_test",
    srcs = [
        "definitions_property_test.go",
        "definitions_test.go",
        "job_def_serializer_property_test.go",
        "job_def_serializer_test.go",
    ],
    embed = [":domain"],
    deps = [
        "@com_github_leanovate_gopter//:go_default_library",
        "@com_github_leanovate_gopter//prop:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_twitter_scoot//common/thrifthelpers:go_default_library",
        "@com_github_twitter_scoot//scheduler/domain/gen-go/sched:go_default_library",
    ],
)
