load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "scheduler_lib",
    srcs = ["main.go"],
    importpath = "github.com/twitter/scoot/scoot/scheduler/scheduler",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_apache_thrift//lib/go/thrift:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_twitter_scoot//common:go_default_library",
        "@com_github_twitter_scoot//common/endpoints:go_default_library",
        "@com_github_twitter_scoot//common/log/hooks:go_default_library",
        "@com_github_twitter_scoot//scheduler:go_default_library",
        "@com_github_twitter_scoot//scheduler/scheduler/config:go_default_library",
        "@com_github_twitter_scoot//scheduler/starter:go_default_library",
    ],
)

go_binary(
    name = "scheduler",
    embed = [":scheduler_lib"],
    visibility = ["//visibility:public"],
)
