load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "server",
    srcs = [
        "cluster_state.go",
        "job_state.go",
        "load_based_sched_alg.go",
        "persist_settings.go",
        "recover_jobs.go",
        "scheduler.go",
        "scheduler_mock.go",
        "stateful_scheduler.go",
        "task_runner.go",
        "task_scheduler.go",
    ],
    importpath = "github.com/twitter/scoot/scoot/scheduler/server",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_davecgh_go_spew//spew:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
        "@com_github_nu7hatch_gouuid//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_twitter_scoot//async:go_default_library",
        "@com_github_twitter_scoot//cloud/cluster:go_default_library",
        "@com_github_twitter_scoot//common:go_default_library",
        "@com_github_twitter_scoot//common/log/hooks:go_default_library",
        "@com_github_twitter_scoot//common/log/tags:go_default_library",
        "@com_github_twitter_scoot//common/stats:go_default_library",
        "@com_github_twitter_scoot//runner:go_default_library",
        "@com_github_twitter_scoot//saga:go_default_library",
        "@com_github_twitter_scoot//scheduler/domain:go_default_library",
        "@com_github_twitter_scoot//worker/domain:go_default_library",
    ],
)

go_test(
    name = "server_test",
    srcs = [
        "cluster_state_test.go",
        "job_state_test.go",
        "load_based_sched_alg_test.go",
        "recover_jobs_test.go",
        "stateful_scheduler_property_test.go",
        "stateful_scheduler_test.go",
        "task_runner_test.go",
        "task_scheduler_test.go",
    ],
    embed = [":server"],
    deps = [
        "@com_github_davecgh_go_spew//spew:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_twitter_scoot//cloud/cluster:go_default_library",
        "@com_github_twitter_scoot//common:go_default_library",
        "@com_github_twitter_scoot//common/log/hooks:go_default_library",
        "@com_github_twitter_scoot//common/log/tags:go_default_library",
        "@com_github_twitter_scoot//common/stats:go_default_library",
        "@com_github_twitter_scoot//runner:go_default_library",
        "@com_github_twitter_scoot//runner/execer/execers:go_default_library",
        "@com_github_twitter_scoot//runner/mocks:go_default_library",
        "@com_github_twitter_scoot//runner/runners:go_default_library",
        "@com_github_twitter_scoot//saga:go_default_library",
        "@com_github_twitter_scoot//saga/sagalogs:go_default_library",
        "@com_github_twitter_scoot//scheduler/domain:go_default_library",
        "@com_github_twitter_scoot//scheduler/setup/worker:go_default_library",
        "@com_github_twitter_scoot//snapshot:go_default_library",
        "@com_github_twitter_scoot//snapshot/snapshots:go_default_library",
        "@com_github_twitter_scoot//tests/testhelpers:go_default_library",
        "@com_github_twitter_scoot//worker/domain:go_default_library",
    ],
)
