load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "setup",
    srcs = [
        "api.go",
        "builder.go",
        "cmds.go",
        "ports.go",
        "sched.go",
        "setup.go",
        "workers.go",
    ],
    importpath = "github.com/twitter/scoot/scoot/scheduler/setup",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_twitter_scoot//scheduler:go_default_library",
        "@com_github_twitter_scoot//scheduler/client:go_default_library",
        "@com_github_twitter_scoot//snapshot/bundlestore:go_default_library",
        "@com_github_twitter_scoot//worker/domain:go_default_library",
    ],
)

go_test(
    name = "setup_test",
    srcs = ["ports_test.go"],
    embed = [":setup"],
)
