load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "starter",
    srcs = [
        "modules.go",
        "start_server.go",
    ],
    importpath = "github.com/twitter/scoot/scoot/scheduler/starter",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_apache_thrift//lib/go/thrift:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_twitter_scoot//cloud/cluster:go_default_library",
        "@com_github_twitter_scoot//common:go_default_library",
        "@com_github_twitter_scoot//common/dialer:go_default_library",
        "@com_github_twitter_scoot//common/endpoints:go_default_library",
        "@com_github_twitter_scoot//common/stats:go_default_library",
        "@com_github_twitter_scoot//runner:go_default_library",
        "@com_github_twitter_scoot//runner/runners:go_default_library",
        "@com_github_twitter_scoot//saga:go_default_library",
        "@com_github_twitter_scoot//saga/sagalogs:go_default_library",
        "@com_github_twitter_scoot//scheduler/scheduler/config:go_default_library",
        "@com_github_twitter_scoot//scheduler/server:go_default_library",
        "@com_github_twitter_scoot//worker/client:go_default_library",
        "@org_golang_x_net//proxy:go_default_library",
    ],
)
