load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "bundlestore",
    srcs = [
        "constants.go",
        "http_server.go",
        "server.go",
        "setup.go",
    ],
    importpath = "github.com/twitter/scoot/scoot/snapshot/bundlestore",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_twitter_scoot//common/endpoints:go_default_library",
        "@com_github_twitter_scoot//common/stats:go_default_library",
        "@com_github_twitter_scoot//config/jsonconfig:go_default_library",
        "@com_github_twitter_scoot//ice:go_default_library",
        "@com_github_twitter_scoot//snapshot/store:go_default_library",
    ],
)

go_test(
    name = "bundlestore_test",
    srcs = ["server_test.go"],
    embed = [":bundlestore"],
    deps = ["@com_github_twitter_scoot//snapshot/store:go_default_library"],
)
