load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cli",
    srcs = ["cli.go"],
    importpath = "github.com/twitter/scoot/scoot/snapshot/cli",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@com_github_twitter_scoot//snapshot:go_default_library",
        "@com_github_twitter_scoot//snapshot/git/gitdb:go_default_library",
        "@com_github_twitter_scoot//snapshot/git/repo:go_default_library",
        "@com_github_twitter_scoot//snapshot/store:go_default_library",
    ],
)
