load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "store",
    srcs = [
        "fake_store.go",
        "file_store.go",
        "groupcache_store.go",
        "http_store.go",
        "noop_store.go",
        "store.go",
    ],
    importpath = "github.com/twitter/scoot/scoot/snapshot/store",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_sethgrid_pester//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_twitter_groupcache//:go_default_library",
        "@com_github_twitter_scoot//cloud/cluster:go_default_library",
        "@com_github_twitter_scoot//common/stats:go_default_library",
    ],
)
