load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "testhelpers",
    srcs = [
        "clusterHelpers.go",
        "generators.go",
        "jobHelpers.go",
        "utils.go",
    ],
    importpath = "github.com/twitter/scoot/scoot/tests/testhelpers",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_apache_thrift//lib/go/thrift:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_twitter_scoot//common/dialer:go_default_library",
        "@com_github_twitter_scoot//runner/execer/execers:go_default_library",
        "@com_github_twitter_scoot//scheduler/api/thrift/gen-go/scoot:go_default_library",
        "@com_github_twitter_scoot//scheduler/client:go_default_library",
        "@com_github_twitter_scoot//scheduler/setup:go_default_library",
    ],
)
